--- a/app/globals.css
+++ b/app/globals.css
@@ -24,3 +24,10 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+body {
+  background-color: white;
+}
+html,
+body {
+  scroll-behavior: smooth;
+}
