--- a/app/globals.css
+++ b/app/globals.css
@@ -31,3 +31,17 @@ html,
 body {
   scroll-behavior: smooth;
 }
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+
+.animate-fadeInUp {
+  animation: fadeInUp 0.25s ease-out;
+}
